--- a/阅读之旅.MD
+++ b/阅读之旅.MD
@@ -1,2 +1,6 @@
 我是一个终身学习者的忠实粉。也一直在读书，甚至不读书的时候会感到很快就会落伍，被时代抛弃。
 有一段时间，我对阅读如饥似渴，而且读到书后感觉收获满满，曾经的很多疑惑也被解开。这种阅读的体验，随着阅读的深入，逐渐变得模糊了。虽然同样是读了新的书，收获感却没有了。
+我的阅读驱动来自2013年的一个庞大计划，我立志成为一个学贯中西的人。我的阅读计划覆盖了哲学、经济、金融、管理和技术几大领域。
+哲学的目的，是为了解决人生之惑，2013年是我即将三十岁的一年。中国人有三十而立、四十不惑的说法。而我当时对人生对社会有着各种的疑惑，自己三十岁是否能立，现代社会所谓的立应该是哪些，这些都是我的问题。于是，哲学成了我阅读的领域之一。
+而经济与金融，是为了我当时认为立的支柱之一——经济独立并且实现阶层跃迁——而来的。现代社会，真正掌握社会资源的资本的力量。我来自农村，没有任何经济基础。在城市里立足，有一份稳定的工作是基础。但是真正的实现立，要实现财务上的立。
+管理和技术的领域，是为了工作的需要。我是一个技术工作者，每天跟计算机打交道。因此学习技术是我的工作内容之一，而管理又是职位升迁必须的知识。
